--- a/index.html
+++ b/index.html
@@ -626,15 +626,15 @@
 							Finally, follow the general instructions in <a href="#task3">Task 3</a>: Don't push to <code>master</code>; instead push the updates to a new branch called <code>release-1.0</code> and do a pull request to further familiarize yourself with this workflow. Accept and integrate into <code>master</code>, and then cleanup the old branch.
 							-->
 
-							<code>git checkout master</code>
-							<code>git merge develop</code>
-							<code>git checkout -b release-1.0 master</code>
-							<code>git push origin release-1.0</code>
-							<code>git checkout master</code>
-							<code>add/push/pull</code>
-							<code>git checkout develop</code>
-							<code>git merge master</code>
-							<code>git add .</code>
+							<code>git checkout master</code><br>
+							<code>git merge develop</code><br>
+							<code>git checkout -b release-1.0 master</code><br>
+							<code>git push origin release-1.0</code><br>
+							<code>git checkout master</code><br>
+							<code>add/push/pull</code><br>
+							<code>git checkout develop</code><br>
+							<code>git merge master</code><br>
+							<code>git add .</code><br>
 							<code>git commit -m "Sync develop with master"</code>
 
 						</p>
