--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
 				</div>
 
 				<section>
-					<h2><span>1.</span> Description</h2>
+					<h2><span>1.</span> Create your first release</h2>
 					<p>
 						Now for our final task. We want to create a dedicated release version containing all of the work we've done thus far. The branch, which we will call <code>release-1.0</code>, will serve as our real, foundational public version. Step one is to push <code>develop</code>, which now contains the hotfixes and the styling feature update, into <code>master</code>, forming a new stable version. Finally, the new <code>master</code> will be used as the starting point for <code>release-1.0</code>. While <code>master</code> will receive updates as long as our project lives, these specific release versions will never be updated again.
 					</p>
