--- a/index.html
+++ b/index.html
@@ -9,19 +9,28 @@
 	<link rel="stylesheet" href="css/main.css">
 
 	<body>
+		<header>
+			<h1>GitFlow Workshop</h1>
+			<div class="menu-btn">
+				MENU
+			</div>
+			<div class="menu">
+				<ul>
+					<a href="#task1"><li>1. Setup a develop branch</li></a>
+					<a href="#task2"><li>2. Feature branch to fix styling</li></a>
+					<a href="#task3"><li>3. Pull requests and clean-up</li></a>
+					<a href="#task4"><li>4. Hotfix branch for corrections</li></a>
+					<a href="#task5"><li>5. Release branch for final version</li></a>
+				</ul>
+			</div>
+		</header>
+
 		<div class="wrapper">
 			<article>
-				<header>
-					<h1>GitFlow Workshop</h1>
-					<p>
-						Workshop on how to use Git for feature branching and running a project according to the <a href="http://nvie.com/posts/a-successful-git-branching-model/" target="_blank" rel="noopener noreferrer">GitFlow</a> process.
-					</p>
-				</header>
-
 				<section>
 					<h2>Introduction</h2>
 					<p>
-						A core concept in Git is the concept of <b>branches</b>. On a personal, small-scale or fairly uncomplicated project you might not have the need to run separate branches. The case then is usually simply to <i>push to master</i>. But what should one do when working on big projects? The <b>GitFlow</b> process is one way of solving this issue.
+						A core concept in Git is the concept of <b>branches</b>. On a personal, small-scale or fairly uncomplicated project you might not have the need to run separate branches. The case then is usually simply to <i>push to master</i>. But what should one do when working on big projects? The <a href="http://nvie.com/posts/a-successful-git-branching-model/" target="_blank" rel="noopener noreferrer">GitFlow</a> process is one way of solving this issue.
 					</p>
 
 					<img src="img/meme.jpg">
@@ -129,10 +138,11 @@
 					</p>
 				</section>
 
+				<a name="task1"></a>
 				<div class="task">
 					<div class="task__contents">
 						<div class="task__inner">
-							<h1><a name="task1">Task 1</a></h1>
+							<h1>Task 1</h1>
 							<h2>Setup a develop branch</h2>
 						</div>
 					</div>
@@ -231,10 +241,11 @@
 					</div>
 				</section>
 
+				<a name="task2"></a>
 				<div class="task">
 					<div class="task__contents">
 						<div class="task__inner">
-							<h1><a name="task2">Task 2</a></h1>
+							<h1>Task 2</h1>
 							<h2>Feature branch to fix styling</h2>
 						</div>
 					</div>
@@ -325,10 +336,11 @@
 					-->
 				</section>
 
+				<a name="task3"></a>
 				<div class="task">
 					<div class="task__contents">
 						<div class="task__inner">
-							<h1><a name="task3">Task 3</a></h1>
+							<h1>Task 3</h1>
 							<h2>Pull requests and clean-up</h2>
 						</div>
 					</div>
@@ -503,10 +515,11 @@
 					</div>
 				</section>
 
+				<a name="task4"></a>
 				<div class="task">
 					<div class="task__contents">
 						<div class="task__inner">
-							<h1><a name="task4">Task 4</a></h1>
+							<h1>Task 4</h1>
 							<h2>Hotfix branch for corrections</h2>
 						</div>
 					</div>
@@ -637,10 +650,11 @@
 				</section>
 				-->
 
+				<a name="task5"></a>
 				<div class="task">
 					<div class="task__contents">
 						<div class="task__inner">
-							<h1><a name="task5">Task 5</a></h1>
+							<h1>Task 5</h1>
 							<h2>Release branch for final version</h2>
 						</div>
 					</div>
